--- a/01JavaScriptDrumKit/index.html
+++ b/01JavaScriptDrumKit/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 
@@ -57,10 +59,31 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
 
-</script>
+    window.addEventListener("keydown", function (e) {
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      if (!audio) return;
+      audio.currentTime = 0;
+      audio.play();
+
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+      key.classList.add('playing');
+    });
+
+    function removeTransition(e) {
+      if (e.propertyName !== 'box-shadow') return;
+      this.classList.remove('playing');
+    }
+
+    const keys = document.querySelectorAll(`.key`);
+    keys.forEach(function (key) {
+      key.addEventListener('transitionend', removeTransition);
+    });
+
+  </script>
 
 
 </body>
+
 </html>
